# muse

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/dev-shells/: .bashrc  default.nix
nix/overlays/: default.nix
nix/pkgs/uv/: default.nix
scripts/: process_project.py
