[project]
name = "muse"
version = "0.1.0"
description = "playing with music stuff"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "antlr4-python3-runtime==4.9.3",
  "cloudpickle==3.1.0",
  "cmake==3.31.1",
  "demucs",
  "dora-search==0.1.12",
  "einops==0.8.0",
  "filelock==3.16.1",
  "jinja2==3.1.4",
  "julius==0.2.7",
  "lameenc==1.7.0",
  "lit==18.1.8",
  "markupsafe==3.0.2",
  "mpmath==1.3.0",
  "networkx==3.4.2",
  "numpy==1.26.4",
  "nvidia-cublas-cu11==11.10.3.66",
  "nvidia-cuda-cupti-cu11==11.7.101",
  "nvidia-cuda-nvrtc-cu11==11.7.99",
  "nvidia-cuda-runtime-cu11==11.7.99",
  "nvidia-cudnn-cu11==8.5.0.96",
  "nvidia-cufft-cu11==10.9.0.58",
  "nvidia-curand-cu11==10.2.10.91",
  "nvidia-cusolver-cu11==11.4.0.1",
  "nvidia-cusparse-cu11==11.7.4.91",
  "nvidia-nccl-cu11==2.14.3",
  "nvidia-nvtx-cu11==11.7.91",
  "omegaconf==2.3.0",
  "openunmix==1.3.0",
  "pyyaml==6.0.2",
  "retrying==1.3.4",
  "setuptools==75.6.0",
  "six==1.17.0",
  "submitit==1.5.2",
  "sympy==1.13.3",
  "torch==2.0.1",
  "torchaudio==2.0.2",
  "tqdm==4.67.1",
  "treetable==0.2.5",
  "triton==2.0.0",
  "typing-extensions==4.12.2",
  "wheel==0.45.1",
]

[tool.uv.sources]
demucs = { git = "https://github.com/facebookresearch/demucs", rev = "e976d93ecc3865e5757426930257e200846a520a" }
